# HorizonBench

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  evaluate.py  pyproject.toml  requirements.txt
data/PAPI/: IPIP_NEO_300.csv
scripts/: analyze_accuracy.py  analyze_controlled_v2.py  bootstrap_ci.py  build_hf_dataset.py  compute_annotator_agreement.py  plot_model_accuracy.py  stat_tests_controlled.py
src/: api_info.yaml.example  benchmark_generation.py  benchmark_prompts.py  main.py  revalidate_history.py  timeline_generator.py
src/causal_framework/evaluation/: intent_fulfillment_assessor.py
src/causal_framework/evolution/: context_adapter.py  experience_tracker.py  preference_evolve_manager.py  relation_propagator.py  stability_processor.py
src/causal_framework/generation/: assistant_persona_generator.py
src/causal_framework/models/: agent_model.py  event_model.py  intent_model.py  preference_model.py  user_model.py
src/causal_framework/sampling/: event_sampler.py  intent_sampler.py  preference_sampler.py
src/config/: config.yaml
src/conversation/: conversation_generator.py  preference_memory_system.py
src/conversation/prompts/: conversation_generation_prompt.py  outline_generation_prompt.py
src/evaluation/: evaluator.py
src/libraries/: base_library.py  event_library.py  preference_library.py  user_library.py
src/libraries/prompts/: generate_event_prompt.py  generate_event_prompt_batch.py  generate_preference_prompt.py  generate_preference_prompt_batch.py
src/pipeline/: generation_pipeline.py
src/utils/: token_calculator.py
