[project]
name = "horizonbench"
version = "1.0.0"
description = "Long-Horizon Personalization Benchmark with Evolving Preferences"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.0.0",
    "huggingface_hub>=0.20.0",
    "litellm>=1.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
generate = [
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "backoff>=2.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "google-genai>=1.0.0",
    "transformers>=4.30.0",
]
analysis = [
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
all = [
    "horizonbench[generate,analysis]",
]
